BUG (bgs): fix replay link and hero icon not showing in records broken for battle luck stats

--- a/core/src/css/component/battlegrounds/desktop/categories/battlegrounds-personal-stats-stats.component.scss
+++ b/core/src/css/component/battlegrounds/desktop/categories/battlegrounds-personal-stats-stats.component.scss
@@ -114,11 +114,11 @@
 		}
 	}
 
-	.battle-luck .label {
-		display: flex;
-		flex-direction: column;
-		position: relative;
-	}
+	// .battle-luck .label {
+	// 	display: flex;
+	// 	flex-direction: column;
+	// 	position: relative;
+	// }
 
 	.explain-link {
 		display: inline-block;
